--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
   --bgColor: 200, 194, 170;
   --color: 77, 73, 62;
   --footerColor: 255, 255, 255, .8;
+  --oddLiBgColor: 205, 194, 158;
+  --evenLiBgColor: 225, 214, 169;
 }
 
 body {
@@ -31,22 +33,28 @@ header .container {
 
 #profile {
   display: flex;
-  flex-wrap: wrap;
   column-gap: 1.4vw;
 
   height: 11vw;
 }
 
 #profile-names {
+  max-width: 90%;
   height: 100%;
   text-transform: uppercase;
 }
+#profile-names > div {
+  display: flex;
+  align-items: center;
+}
 
-#fullname {
-  font-weight: 400;
-  margin: 0;
+#fullname { 
   height: 70%;
   /* font-size: 88px; */
+}
+#fullname > h1 {
+  font-weight: 400;
+  margin: 0;
 }
 
 #nickname {
@@ -124,6 +132,7 @@ main .content {
 
 #talent {
   margin-top: 4em;
+  margin-bottom: 1em;
 }
 #talent ul {
   list-style: none;
@@ -141,18 +150,19 @@ main .content {
   }
 }
 #talent li {  
-  padding: 10px 10px;
-  
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
 }
 #talent li:nth-child(odd) {
-  background-color: rgb(205, 194, 158);
+  background-color: rgb(var(--oddLiBgColor));
 }
 #talent li:nth-child(even) {
-  background-color: rgb(225, 214, 169);
+  background-color: rgb(var(--evenLiBgColor));
+}
+#talent li > div {
+  padding: 10px;
 }
 
 footer {
@@ -197,4 +207,148 @@ footer a {
 }
 a:visited {
   color: inherit;
+}
+
+.styled-button {
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  box-sizing: border-box;
+
+  border: 1px solid transparent;
+  border-left: none;
+  border-right: none;
+  background-color: transparent;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+}
+.styled-button::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 3px;
+  bottom: 3px;
+
+  width: 0; 
+  transition: width .2s;
+}
+.styled-button:hover::before {
+  width: 100%;
+}
+
+.absolute-button {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#fullname > h1,
+#nickname > div {
+  display: inline-block;
+  min-width: 12ch;
+  position: relative;
+}
+#fullname > h1:hover,
+#nickname > div:hover {
+  color: transparent;
+}
+
+#profile-names .styled-button::before {
+  background-color: white;
+}
+@media screen and (max-width: 540px) {
+  #profile-names .styled-button::before {
+    top: 1px;
+    bottom: 1px;
+  }
+}
+#profile-names .styled-button::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  color: black;
+  letter-spacing: .2em;
+  text-align: center;
+
+  width: 0; 
+  transition: width .2s;
+}
+#profile-names .styled-button:hover {
+  border-color: white; 
+}
+#profile-names .styled-button:hover::after {
+  content: "-CHANGE-";
+  width: 100%;
+}
+
+#talent .styled-button::before {
+  background-color: rgb(var(--color));
+}
+#talent .styled-button:hover {
+  border-color: rgb(var(--color));
+}
+
+#talent li {
+  position: relative;
+}
+#talent li .styled-button::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  letter-spacing: .3em;
+  text-align: center;
+
+  width: 100%; 
+  opacity: 0;
+  transition: opacity .2s;
+}
+#talent li .styled-button:hover::after {
+  content: "-DELETE-";
+  opacity: 1;
+}
+#talent li:nth-child(odd) .styled-button:hover::after {
+  color: rgb(var(--oddLiBgColor));
+}
+#talent li:nth-child(even) .styled-button:hover::after {
+  color: rgb(var(--evenLiBgColor));
+}
+
+#add-button {
+  padding: .55em 1.1em;
+  background-color: rgba(var(--color), .35);
+  color: rgb(var(--color));
+  letter-spacing: .3em;
+}
+#add-button:hover {
+  color: rgb(var(--bgColor));
+}
+
+.background-color-picker {
+  float: right;
+
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+}
+.background-color-picker > div {
+  font-size: 16px;
+  text-transform: lowercase;
+  letter-spacing: .1rem;
+}
+.background-color-picker > input {
+  cursor: pointer;
+  border: none;
+  padding: 4px;
+  width: 20px;
+  height: 20px;
 }
